--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Oh, it's a Countdown!</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
