Adding code to validate word input against available letters

--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
         <div class="square" id="square8">W</div>
         <div class="square" id="square9">N</div>
     </div>
-    <label>VOWELS:</label>
-    <input type="text" id="vowel"></input>
-    <button onclick="setCounts()" href="#">SUBMIT</button>
+    <div id="vowelForm">
+        <label>VOWELS:</label>
+        <input type="text" id="vowel"></input>
+        <button onclick="setCounts()" href="#">SUBMIT</button>
+    </div>
+    <div id="guessForm">
+        <label>GUESS:</label>
+        <input type="text" id="guess"></input>
+        <button onclick="checkGuess()" href="#">SUBMIT</button>
+    </div>
+
     <script src="squares.js"></script>
 </body>
 
