Now has answer validation, bring your own wordlist

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <button onclick="checkGuess()" href="#">SUBMIT</button>
     </div>
 
+    <label>Correct? </label>
+    <div class="answer" id="answerIndicator"></div>
     <script src="squares.js"></script>
 </body>
 
