Improved inline documentation, added title.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1 id="gameTitle">INTCLG: It's Not the Countdown Letters Game!</h1>
     <div class="game-board">
         <div class="square" id="square1">C</div>
         <div class="square" id="square2">O</div>
